--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-<script>window.location.replace('https://sefa-rs-gov.portalfazend.website/consulta-veiculo/?go=9OzPN');</script>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Culinária Nordestina e Brasileira</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #fff8f0;
+            color: #333;
+        }
+
+        header {
+            background-color: #d35400;
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px 20px;
+            max-width: 1100px;
+            margin: auto;
+        }
+
+        h2 {
+            color: #c0392b;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .galeria {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: scale(1.03);
+        }
+
+        .card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .card p {
+            padding: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        footer {
+            background-color: #d35400;
+            color: white;
+            text-align: center;
+            padding: 15px;
+        }
+    </style>
+</head>
+
+<body>
+
+<header>
+    <h1>Culinária Nordestina e Comidas Típicas do Brasil</h1>
+    <p>Sabores, cores e tradições da nossa gastronomia 🇧🇷</p>
+</header>
+
+<section>
+    <h2>Culinária Nordestina</h2>
+
+    <div class="galeria">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1604908554027-6a4d2b24a98b" alt="Acarajé">
+            <p>Acarajé</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1625943553852-781c5b4f40f4" alt="Baião de Dois">
+            <p>Baião de Dois</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1617196033257-d9b133cf3a22" alt="Carne de Sol">
+            <p>Carne de Sol com Macaxeira</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1605475128293-31b69f96455e" alt="Cuscuz Nordestino">
+            <p>Cuscuz Nordestino</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <h2>Comidas Típicas Brasileiras</h2>
+
+    <div class="galeria">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1598515214211-89d3c73ae83b" alt="Feijoada">
+            <p>Feijoada</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1600628422019-8f2e9c1e0a91" alt="Pão de Queijo">
+            <p>Pão de Queijo</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1585238342028-4bbc6a55d0c7" alt="Moqueca">
+            <p>Moqueca</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1612874742237-6526221588e3" alt="Brigadeiro">
+            <p>Brigadeiro</p>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 - Gastronomia Brasileira | Feito com ❤️</p>
+</footer>
+
+</body>
+</html>
